cmake_minimum_required ( VERSION 2.8 )

##---------------------------------------------------------------------------##
# General Configuration
# =====================
##---------------------------------------------------------------------------##

enable_testing()
add_subdirectory ( cantools )
add_subdirectory ( tests )
